test/failing/triple_errors.c
string s = "jjdjd
char c = 'agvb'
int $obj;